# myfs

./: .gitignore  CMakeLists.txt
client/: README.md
client/include/: client.h
client/src/: client.c  prepare_request.c
daemon/include/: server.h
daemon/src/: server.c
filesystem/include/: filesystem.h
filesystem/src/: driver.c  filesystem.c  operations.c  utils.c
shared/include/: data_structures.h  myfs.h  web.h
shared/src/: data_structures.c  myfs.c  web.c
tests/: basic_test.sh
